--- a/.github/workflows/desafio-1.yml
+++ b/.github/workflows/desafio-1.yml
@@ -13,25 +13,32 @@ jobs:
   docker_image:
     runs-on: ubuntu-latest
     steps:
-    - name: Docker PULL
-      run: |
-        docker pull ${{inputs.docker_image}}
+      - name: Login Docker Hub
+        uses: docker/login-action@v3
+        with:
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
+    
+      - name: Docker PULL
+        run: |
+          docker pull ${{inputs.docker_image}}
 
-    - name: Docker Image
-      run: |
-        docker image 
+      - name: Docker Image
+        run: |
+          docker image ls
 
-    - name: Docker Scout
-      id: docker-scout
-      uses: docker/scout-action@v1
-      with:
-        command: cves,recommendations,compare
-        to-latest: true
-        ignore-base: true
-        ignore-unchanged: true
-        only-fixed: true
+    
+      - name: Docker Scout
+        id: docker-scout
+        uses: docker/scout-action@v1
+        with:
+          command: cves,recommendations,compare
+          to-latest: true
+          ignore-base: true
+          ignore-unchanged: true
+          only-fixed: true
 
-  
+    
       
 
 
