--- a/.github/workflows/melhorando-desafio-1.yml
+++ b/.github/workflows/melhorando-desafio-1.yml
@@ -26,8 +26,7 @@ jobs:
 
       - name: Docker Image
         run: |
-          IMAGE_NAME=$(echo "${{github.event.inputs.docker_image}}" | cut -d ':' -f 1)
-          docker images | grep ${{github.event.inputs.docker_image}}
+          docker images
 
     
       - name: Docker Scout
